--- a/app/home/templates/base.html
+++ b/app/home/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Teste YouShop</title>
+    <title>Projeto de Gerenciamento de Árvores - Teste YouShop</title>
     <!-- Incluir CSS, favicon e outros metadados aqui -->
 
     {% block extrahead %}{% endblock %}
