--- a/app/home/templates/profile_detail.html
+++ b/app/home/templates/profile_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Perfil</h1>
+<h1  class="text-center" style="padding: 1rem 0">Perfil</h1>
 
 <p><strong>Nome:</strong> {{ user.username }}</p>
 <p><strong>Sobre:</strong> {{ profile.about }}</p>
