--- a/app/home/templates/add_tree.html
+++ b/app/home/templates/add_tree.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h2>Adicionar Árvore</h2>
+  <h2 class="text-center" style="padding: 1rem 0">Adicionar Árvore</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Salvar</button>
+    <button class="btn btn-success" type="submit">Salvar</button>
   </form>
 {% endblock %}
