--- a/app/home/templates/base.html
+++ b/app/home/templates/base.html
@@ -3,37 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Projeto de Gerenciamento de Árvores - Teste YouShop</title>
-    <!-- Incluir CSS, favicon e outros metadados aqui -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     {% block extrahead %}{% endblock %}
 </head>
 <body>
     <header>
-        <nav>
+        <nav style="padding: 1rem 0">
            
             {% if user.is_authenticated %} 
-                usuário(a): <a href="../profile" >{{ user.username }}</a> - 
-                <a href="{% url 'planted_trees' %}"> Árvores Plantadas</a> | 
-                <a href="{% url 'add_account' %}">Adicionar conta</a> | 
-                <a href="{% url 'add_tree' %}">Adicionar árvore</a> |
-                <a href="{% url 'add_planted_tree' %}">Adicionar árvore plantada</a> |
-                <a href="{% url 'logout' %}">Sair</a>
+
+            <div class="container text-center">
+                <div class="row align-items-start">
+                  <div class="col-2">
+                    usuário(a): <a href="../profile" >{{ user.username }}</a>
+                  </div>
+                  <div class="col">
+                    <a href="{% url 'planted_trees' %}"> Árvores Plantadas</a> | 
+                    <a href="{% url 'add_account' %}">Adicionar conta</a> | 
+                    <a href="{% url 'add_tree' %}">Adicionar árvore</a> |
+                    <a href="{% url 'add_planted_tree' %}">Adicionar árvore plantada</a> |
+                    <a href="{% url 'logout' %}">Sair</a>
+                  </div>
+                </div>
+              </div>
+              
             {% else %}
-                <a href="{% url 'login' %}">Login</a>
+            <div class="container text-center">
+                <div class="row align-items-start">
+                  <div class="col-2">
+                <a href="/">Login</a> | 
+                <a href="{% url 'register' %}">Criar Usuário</a>
+            </div>
+        </div>
+      </div>
             {% endif %}
-            <!-- Adicionar mais navegação se necessário -->
         </nav>
     </header>
-
+    <div class="container-sm">
     <main>
-        <!-- Este bloco será sobrescrito pelo conteúdo de outros templates -->
         {% block content %}
         {% endblock %}
     </main>
-
+    </div>
     <footer>
-        <!-- Incluir rodapé aqui -->
-        <p>&copy; {{ year }} Projeto de Gerenciamento de Árvores - Teste YouShop</p>
+        <p class="text-center" style="padding: 1rem 0">&copy; {{ year }} Projeto de Gerenciamento de Árvores - Teste YouShop</p>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </footer>
 </body>
 </html>
