--- a/app/home/templates/planted_tree_detail.html
+++ b/app/home/templates/planted_tree_detail.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>{{ tree.tree.name }}</h2>
-<p>Scientific Name: {{ tree.tree.scientific_name }}</p>
-<p>Age: {{ tree.age }}</p>
-<p>Planted At: {{ tree.planted_at }}</p>
+<h2  class="text-center" style="padding: 1rem 0">{{ tree.tree.name }}</h2>
+<p>Nome Científico: {{ tree.tree.scientific_name }}</p>
+<p>Idade: {{ tree.age }}</p>
+<p>Plantado em: {{ tree.planted_at }}</p>
 <p>Latitude: {{ tree.latitude }}</p>
 <p>Longitude: {{ tree.longitude }}</p>
 {% endblock %}
