--- a/app/home/templates/base.html
+++ b/app/home/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Projeto de Gerenciamento de Árvores - Teste YouShop</title>
+    <title>Trees Everywhere - Teste YouShop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     {% block extrahead %}{% endblock %}
@@ -47,7 +47,7 @@
     </main>
     </div>
     <footer>
-        <p class="text-center" style="padding: 1rem 0">&copy; {{ year }} Projeto de Gerenciamento de Árvores - Teste YouShop</p>
+        <p class="text-center" style="padding: 1rem 0">&copy; {{ year }} Projeto Trees Everywhere - Teste YouShop</p>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </footer>
 </body>
